hphp/test/slow/container-ref-init/map-init.php.expectf

Fatal error: Value of collection element cannot be marked as reference in %s/map-init.php on line 7
